--- a/public/pages/gallery.html
+++ b/public/pages/gallery.html
@@ -50,7 +50,7 @@
           sourceVideo.type = "video/MP4";
           sourceVideo.src = `${works[i].url}`;
           video.appendChild(sourceVideo);
-          workItem.append(name, year, album, imageDiv, video);
+          workItem.append(name, year, album, imageDiv);
           workList.append(workItem);
         }
         const gallery = document.getElementById("gallery");
